# ai-animal-classification

./: .gitignore  README.md  finetuning-with-checkpoint.py  finetuning.py  inference.py  inference_results.csv  pyproject.toml  ui.py
Animal-Classification-6/: README.dataset.txt  README.roboflow.txt
results/: inference_results_original.csv  inference_results_original_zero_shot.csv  inference_results_tuned.csv
