[tool.poetry]
name = "ai-learning"
version = "0.1.0"
description = "Learning AI Stuff"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.12"
stripe = "^12.0.0"
openai = "^1.76.2"
torch = "^2.7.0"
torchvision = "^0.22.0"
transformers = "4.38.2"
datasets = "^3.5.1"
roboflow = "^1.1.63"
peft = "0.10.0"
accelerate = "0.27.2"
gradio = "^5.29.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
